fix padding on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -71,6 +71,7 @@ nav
         flex-direction: column
     .layout
         flex-direction: column
+        padding: 25px 30px
     nav
         width: 100%
         margin-bottom: 50px
